// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`setValue set 1`] = `
{
  "setValue": {
    "__typename": "SetValuePayload",
    "delta": 1,
    "node": {
      "__typename": "ChecklistResult",
      "status": {
        "__typename": "ChecklistOpen",
      },
      "widget": {
        "__typename": "NumberWidget",
        "number": 42,
      },
    },
    "parent": {
      "__typename": "Checklist",
      "status": {
        "__typename": "ChecklistOpen",
      },
    },
  },
}
`;

exports[`setValue set: dynamic content 1`] = `
{
  "setValue": {
    "__typename": "SetValuePayload",
    "delta": 1,
    "node": {
      "__typename": "ChecklistResult",
      "status": {
        "__typename": "ChecklistOpen",
      },
      "widget": {
        "__typename": "StringWidget",
        "string": "Hello world",
      },
    },
    "parent": {
      "__typename": "Checklist",
      "status": {
        "__typename": "ChecklistOpen",
      },
    },
  },
}
`;

exports[`setValue entity is not mutable 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Entity is not mutable: foo],
  ],
}
`;

exports[`setValue global id invariant 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Unexpected error value: "invariant violated"],
  ],
}
`;
